--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
         <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
     </head>
     <body>
-        <div class="aaa">
+        <div class="picture">
             <img src="./eisenhower-matrix.jpg">
-            <a class="more_inf" 
+            <a class="more-inf" 
                 href="https://goal-life.com/page/method/matrix-eisenhower">
                 Want more details?
             </a>
         </div>
-        <div class="centered-main-page-element">
-            <p id="topSectionForAddingElementToList">
-                <label for="new-task">Add Item</label>
-                <div class="task-row-wrapper">
-                    <input id="new-task"class="task" type="text">
+        <div class="main-box">
+            <p id="add">
+                <label for="new">Add Item</label>
+                <div class="wrapper">
+                    <input id="new"class="task" type="text">
                     <button>Add</button>
                 </div>
             </p>
             <h3>Todo</h3>
-            <ul id="incompleteTasks">
+            <ul id="incomplete">
                 <li><input type="checkbox">
                     <label class="task">Pay Bills</label>
                     <input type="text" class="task">
@@ -31,7 +31,7 @@
                         <img src="./remove.svg">
                     </button>
                 </li>
-                <li class="editMode">
+                <li class="mode">
                     <input type="checkbox">
                     <label class="task">Go Shopping</label>
                     <input type="text" value="Go Shopping" class="task">
@@ -42,7 +42,7 @@
                 </li>
             </ul>
             <h3>Completed</h3>
-            <ul id="completed-tasks">
+            <ul id="completed">
                 <li>
                     <input type="checkbox" checked>
                     <label class="task">See the Doctor</label>
