--- a/index.html
+++ b/index.html
@@ -1,59 +1,58 @@
 <!DOCTYPE html>
-<html>
-
+  <html>
     <head><title>Todo App</title>
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-        <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
+      <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+      <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
     </head>
     <body>
-        <div class="picture">
-            <img src="./eisenhower-matrix.jpg">
-            <a class="more-inf" 
-                href="https://goal-life.com/page/method/matrix-eisenhower">
-                Want more details?
-            </a>
-        </div>
-        <div class="main-box">
-            <p id="add">
-                <label for="new">Add Item</label>
-                <div class="wrapper">
-                    <input id="new"class="task" type="text">
-                    <button>Add</button>
-                </div>
-            </p>
-            <h3>Todo</h3>
-            <ul id="incomplete">
-                <li><input type="checkbox">
-                    <label class="task">Pay Bills</label>
-                    <input type="text" class="task">
-                    <button class="edit">Edit</button>
-                    <button class="delete">
-                        <img src="./remove.svg">
-                    </button>
-                </li>
-                <li class="mode">
-                    <input type="checkbox">
-                    <label class="task">Go Shopping</label>
-                    <input type="text" value="Go Shopping" class="task">
-                    <button class="edit">Save</button>
-                    <button class="delete">
-                        <img src="./remove.svg">
-                    </button>
-                </li>
-            </ul>
-            <h3>Completed</h3>
-            <ul id="completed">
-                <li>
-                    <input type="checkbox" checked>
-                    <label class="task">See the Doctor</label>
-                    <input type="text" class="task">
-                    <button class="edit">Edit</button>
-                    <button class="delete">
-                        <img src="./remove.svg">
-                    </button>
-                </li>
-            </ul>
-        </div>
-        <script src="app.js"></script>
+      <header>
+        <img src="./eisenhower-matrix.jpg" alt="picture with a description of the application">
+        <a class="more-inf" 
+           href="https://goal-life.com/page/method/matrix-eisenhower">
+           Want more details?
+        </a>
+      </header>
+      <main class="main-box">
+        <section id="add">
+          <label for="new">Add Item</label>
+          <div class="wrapper">
+            <input id="new"class="task" type="text">
+            <button>Add</button>
+          </div>
+        </section>
+        <h3>Todo</h3>
+        <ul id="incomplete">
+          <li><input type="checkbox">
+              <label class="task">Pay Bills</label>
+              <input type="text" class="task">
+              <button class="edit">Edit</button>
+              <button class="delete">
+                <img src="./remove.svg" alt="cross icon">
+              </button>
+          </li>
+          <li class="mode">
+              <input type="checkbox">
+              <label class="task">Go Shopping</label>
+              <input type="text" value="Go Shopping" class="task">
+              <button class="edit">Save</button>
+              <button class="delete">
+                <img src="./remove.svg" alt="cross icon">
+              </button>
+          </li>
+        </ul>
+        <h3>Completed</h3>
+        <ul id="completed">
+          <li>
+              <input type="checkbox" checked>
+              <label class="task">See the Doctor</label>
+              <input type="text" class="task">
+              <button class="edit">Edit</button>
+              <button class="delete">
+                <img src="./remove.svg" alt="cross icon">
+              </button>
+          </li>
+        </ul>
+      </main>
+      <script src="app.js"></script>
     </body>
-</html>
+  </html>
