--- a/index.html
+++ b/index.html
@@ -13,45 +13,52 @@
         </a>
       </header>
       <main class="main-box">
-        <section id="add">
-          <label for="new">Add Item</label>
-          <div class="wrapper">
-            <input id="new"class="task" type="text">
-            <button>Add</button>
-          </div>
-        </section>
-        <h3>Todo</h3>
-        <ul id="incomplete">
-          <li><input type="checkbox">
-              <label class="task">Pay Bills</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img src="./remove.svg" alt="cross icon">
-              </button>
-          </li>
-          <li class="mode">
-              <input type="checkbox">
-              <label class="task">Go Shopping</label>
-              <input type="text" value="Go Shopping" class="task">
-              <button class="edit">Save</button>
-              <button class="delete">
-                <img src="./remove.svg" alt="cross icon">
-              </button>
-          </li>
-        </ul>
-        <h3>Completed</h3>
-        <ul id="completed">
-          <li>
-              <input type="checkbox" checked>
-              <label class="task">See the Doctor</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img src="./remove.svg" alt="cross icon">
-              </button>
-          </li>
-        </ul>
+        <article>
+          <section id="add">
+            <label for="new">Add Item</label>
+            <div class="wrapper">
+              <input id="new"class="task" type="text">
+              <button>Add</button>
+            </div>
+          </section>
+          <section>
+            <h3>Todo</h3>
+            <ul id="incomplete">
+              <li>
+                <input type="checkbox">
+                <label class="task">Pay Bills</label>
+                <input type="text" class="task">
+                <button class="edit">Edit</button>
+                <button class="delete">
+                  <img src="./remove.svg" alt="cross icon">
+                </button>
+              </li>
+              <li class="mode">
+                <input type="checkbox">
+                <label class="task">Go Shopping</label>
+                <input type="text" value="Go Shopping" class="task">
+                <button class="edit">Save</button>
+                <button class="delete">
+                  <img src="./remove.svg" alt="cross icon">
+                </button>
+              </li>
+            </ul>
+          </section>
+          <aside>
+            <h3>Completed</h3>
+            <ul id="completed">
+              <li>
+                <input type="checkbox" checked>
+                <label class="task">See the Doctor</label>
+                <input type="text" class="task">
+                <button class="edit">Edit</button>
+                <button class="delete">
+                  <img src="./remove.svg" alt="cross icon">
+                </button>
+              </li>
+            </ul>
+          </aside>
+        </article>   
       </main>
       <script src="app.js"></script>
     </body>
