--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
       <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
     </head>
-    <body>
-      <header>
-        <img src="./eisenhower-matrix.jpg" alt="picture with a description of the application">
-        <a class="more-inf" 
+    <body class="page">
+      <header class="header">
+        <img src="./eisenhower-matrix.jpg" class="header_img" alt="picture with a description of the application">
+        <a class="header_more-inf" 
            href="https://goal-life.com/page/method/matrix-eisenhower">
            Want more details?
         </a>
@@ -25,21 +25,21 @@
             <h3>Todo</h3>
             <ul id="incomplete">
               <li>
-                <input type="checkbox">
+                <input type="checkbox" class="checkbox">
                 <label class="task">Pay Bills</label>
                 <input type="text" class="task">
                 <button class="edit">Edit</button>
                 <button class="delete">
-                  <img src="./remove.svg" alt="cross icon">
+                  <img src="./remove.svg" class="cross-icon" alt="cross icon">
                 </button>
               </li>
               <li class="mode">
-                <input type="checkbox">
+                <input type="checkbox" class="checkbox">
                 <label class="task">Go Shopping</label>
                 <input type="text" value="Go Shopping" class="task">
                 <button class="edit">Save</button>
                 <button class="delete">
-                  <img src="./remove.svg" alt="cross icon">
+                  <img src="./remove.svg" class="cross-icon" alt="cross icon">
                 </button>
               </li>
             </ul>
@@ -48,12 +48,12 @@
             <h3>Completed</h3>
             <ul id="completed">
               <li>
-                <input type="checkbox" checked>
-                <label class="task">See the Doctor</label>
+                <input type="checkbox" class="checkbox" checked>
+                <label class="task" id="task">See the Doctor</label>
                 <input type="text" class="task">
                 <button class="edit">Edit</button>
                 <button class="delete">
-                  <img src="./remove.svg" alt="cross icon">
+                  <img src="./remove.svg" class="cross-icon" alt="cross icon">
                 </button>
               </li>
             </ul>
